log

Thu 14 Mar 2024 01:03:56 AM UTC: 
 exercises.c | 64 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 60 insertions(+), 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:80:15: error: ‘arr’ undeclared (first use in this function); did you mean ‘arr2’?
   80 |           if (arr[i] < arr[j])
      |               ^~~
      |               arr2
exercises.c:80:15: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c34c5f9
Thu 14 Mar 2024 01:04:20 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:82:34: error: ‘arr’ undeclared (first use in this function); did you mean ‘arr2’?
   82 |             result[nuevaTalla] = arr[i];
      |                                  ^~~
      |                                  arr2
exercises.c:82:34: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
7ee6e30
Thu 14 Mar 2024 01:04:30 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
3fdbb7f
Thu 14 Mar 2024 01:07:05 AM UTC: 
 exercises.c | 20 ++------------------
 1 file changed, 2 insertions(+), 18 deletions(-)
 tests:  0|5
total_score: 20/70
20231ff
Thu 14 Mar 2024 01:08:37 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
0172d29
Thu 14 Mar 2024 01:14:28 AM UTC: 
 exercises.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:81:11: error: ‘arr’ undeclared (first use in this function); did you mean ‘arr2’?
   81 |       if (arr[i] < arr2[j])
      |           ^~~
      |           arr2
exercises.c:81:11: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
4cf0480
Thu 14 Mar 2024 01:14:39 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:81:11: error: ‘arr’ undeclared (first use in this function); did you mean ‘arr2’?
   81 |       if (arr[i] < arr2[j])
      |           ^~~
      |           arr2
exercises.c:81:11: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
213b180
Thu 14 Mar 2024 01:14:48 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
39417e4
Thu 14 Mar 2024 01:16:45 AM UTC: 
 exercises.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  0|3
total_score: 40/70
effbd01
Thu 14 Mar 2024 01:44:22 AM UTC: 
 exercises.c | 42 +++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 41 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:117:7: error: unused variable ‘desordenado’ [-Werror=unused-variable]
  117 |   int desordenado = 0;
      |       ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2391203
Thu 14 Mar 2024 01:44:41 AM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
Thu 14 Mar 2024 01:44:51 AM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
Thu 14 Mar 2024 01:45:12 AM UTC: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
Thu 14 Mar 2024 01:47:01 AM UTC: 
 exercises.c | 13 ++++++-------
 1 file changed, 6 insertions(+), 7 deletions(-)
 tests:  0|3
total_score: 40/70
29d027d
Thu 14 Mar 2024 01:48:26 AM UTC: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|3
total_score: 40/70
e8c4afb
Thu 14 Mar 2024 01:50:41 AM UTC: 
 exercises.c | 18 +++++-------------
 1 file changed, 5 insertions(+), 13 deletions(-)
 tests:  0|2
total_score: 50/70
ef0fed2
Thu 14 Mar 2024 02:03:37 AM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘inicializarLibro’:
exercises.c:168:15: error: ‘Libro’ has no member named ‘nombreAutor’
  168 |   strcpy(libro->nombreAutor, nombreAutor);
      |               ^~
exercises.c:169:8: error: ‘Libro’ has no member named ‘anioNacimiento’
  169 |   libro->anioNacimiento = anioNacimiento;
      |        ^~
Compilation failed
6b8e8fb
Thu 14 Mar 2024 02:04:39 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘inicializarLibro’:
exercises.c:168:15: error: ‘Libro’ has no member named ‘nombreAutor’
  168 |   strcpy(libro->nombreAutor, nombreAutor);
      |               ^~
exercises.c:169:8: error: ‘libro’ is a pointer; did you mean to use ‘->’?
  169 |   libro.anioNacimiento = anioNacimiento;
      |        ^
      |        ->
exercises.c:170:8: error: ‘libro’ is a pointer; did you mean to use ‘->’?
  170 |   libro.anioPublicacion = anioPublicacion;
      |        ^
      |        ->
Compilation failed
bd6a5de
Thu 14 Mar 2024 02:05:21 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘inicializarLibro’:
exercises.c:168:15: error: ‘Libro’ has no member named ‘nombreAutor’
  168 |   strcpy(libro->nombreAutor, nombreAutor);
      |               ^~
exercises.c:169:8: error: ‘Libro’ has no member named ‘anioNacimiento’
  169 |   libro->anioNacimiento = anioNacimiento;
      |        ^~
Compilation failed
d090923
Thu 14 Mar 2024 02:06:02 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘inicializarLibro’:
exercises.c:168:15: error: ‘Libro’ has no member named ‘nombreAutor’
  168 |   strcpy(libro->nombreAutor, nombreAutor);
      |               ^~
Compilation failed
de723f6
Thu 14 Mar 2024 02:06:23 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘inicializarLibro’:
exercises.c:168:15: error: ‘Libro’ has no member named ‘nombreAutor’
  168 |   strcpy(libro->nombreAutor, nombreAutor);
      |               ^~
exercises.c:170:8: error: expected identifier or ‘(’ before ‘->’ token
  170 |   Libro->anioPublicacion = anioPublicacion;
      |        ^~
Compilation failed
9600855
Thu 14 Mar 2024 02:06:30 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘inicializarLibro’:
exercises.c:168:15: error: ‘Libro’ has no member named ‘nombreAutor’
  168 |   strcpy(libro->nombreAutor, nombreAutor);
      |               ^~
Compilation failed
bc0c744
Thu 14 Mar 2024 02:06:56 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|1
total_score: 60/70
5bf5811
Thu 14 Mar 2024 02:23:23 AM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘crearListaEnlazada’:
exercises.c:193:9: error: unused variable ‘actual’ [-Werror=unused-variable]
  193 |   Nodo *actual = NULL;
      |         ^~~~~~
exercises.c:192:9: error: unused variable ‘primero’ [-Werror=unused-variable]
  192 |   Nodo *primero = NULL;
      |         ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
86588b6
Thu 14 Mar 2024 02:23:32 AM UTC: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|1
total_score: 60/70
098f3bc
